# Script-Translator

./: .gitignore  AGENTS.md  pyproject.toml  requirements.txt
script-translator-frontend/: index.html  package-lock.json  package.json
script-translator-frontend/src/api/: axiosClient.js  translateApi.js  types.js
script-translator-frontend/src/components/: FileUpload.jsx  Layout.jsx  StatusDisplay.jsx  TranslationOptions.jsx
script-translator-frontend/src/hooks/: useTranslation.js
script-translator-frontend/src/pages/: HomePage.jsx
src/api/: main.py
src/core/: config.py  security.py
src/models/: __init__.py  enums.py  schemas.py
src/providers/: __init__.py  openai_provider.py
src/services/: __init__.py  extractor.py  file_generator.py  translator.py  worker.py
src/services/providers/: __init__.py  base.py  deepl.py  google.py  indictrans.py  openai.py  sarvam.py
src/utils/: chunker.py  logger.py
tests/: large_marathi.docx  sample_marathi.docx
