[tool.poetry]
name = "script-translator"
version = "1.0.0"
description = "FastAPI-based REST API for translating Marathi PDFs to English/Hindi"
authors = ["Shivam"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.109.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
pydantic = ">=2.0,<2.6"
pydantic-settings = ">=2.0,<2.2"
pdfplumber = "0.10.4"
python-docx = "1.1.0"
openai = "1.10.0"
sarvamai = ">=0.1.0"
python-multipart = "0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
